# melodia

./: AUTHORS  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  asynchttplib.py  interface.glade  interface.py  main.py  player.c  playlist.py
